[package]
name = "OptiFunkin"
description = "Sparrow Atlas Repacker and Optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "unicode", "wrap_help"] }
colog = "1.3.0"
env_logger = "0.11.5"
image = "0.25.2"
log = "0.4.22"
max_rects = { git = "https://github.com/CobaltBar/max_rects.git", version = "1.0.2" }
oxipng = { version = "9.*", features = [
	"parallel",
	"zopfli",
	"filetime",
], default-features = false }
quick-xml = "0.36.1"
rayon = "1.10.0"
tempfile = "3.12.0"
walkdir = "2.5.0"
